# python-lunrclient

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  README.md  README.rst  new-file  requirements.txt  setup.cfg  setup.py  tox.ini
debian/: changelog  control  files  python-lunrclient.postinst.debhelper  python-lunrclient.prerm.debhelper  python-lunrclient.substvars  python-python-lunrclient.postinst.debhelper  python-python-lunrclient.prerm.debhelper  python-python-lunrclient.substvars  rules
lunrclient/: __init__.py  base.py  client.py  displayable.py  lunr.py  lunr_shell.py  shared.py  storage.py  storage_shell.py  subcommand.py  tools.py  version.py
test/: test_storageclient.py  test_subcommand.py
