[metadata]
name = python-lunrclient
summary = Lunr API client
description-file =
    README.rst
author = Derrick J Wippler
author-email = thrawn01@gmail.com
home-page = https://github.com/rackerlabs/python-lunrclient
classifier =
    Environment :: Lunr
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    storage = lunrclient.storage_shell:main
    lunr = lunrclient.lunr_shell:main
